include require: illuminate/support

--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,7 @@
         }
     },
     "minimum-stability": "dev",
-    "require": {}
+    "require": {
+        "illuminate/support": "^5.3"
+    }
 }
